# AlgorithmsAndDataStructures

./: .gitignore  AlgorithmsAndDataStructures.sln  newProject.bat
B1/: ApiAcess.cs  Calculator.cs  Fibonacci.cs  Print.cs  Program.cs  RandomFunctions.cs  Variables.cs
B2/: Destination.cs  Engine.cs  Fuel.cs  Product.cs  Program.cs  Ship.cs  WorldMarket.cs
B3/: HighestPeak.cs  Homework.cs  Program.cs
B4/: KsiegaPierwszaBezInterpunkcji.txt  Program.cs  ZadanieDomowe.cs
B5/: PrimaryNumbers.cs  Program.cs
B6/: Program.cs  SearchSortEngine.cs
B7/: B7.csproj  Program.cs  Tree.cs  TreeNode.cs  TreePrint.cs
B8/: Graph.cs  Program.cs  SquareMatrix.cs
BG/: GameOfLife.cs  Program.cs
BP/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  map.cpp  map.h  struct.cpp  struct.h
BP/Characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
BP/Utilities/: RandomGenerator.cpp  RandomGenerator.h  functions.cpp  functions.h  struct.cpp  struct.h
BP/WorldGenerator/: Graph.cpp  Graph.h  Map.cpp  Map.h
